<resources>
    <string name="app_name">ThunderTools</string>
    <string name="brand_name">ThunderNet</string>
    <string name="version_label">Versión %1$s • © Maritza</string>

    <string name="login_title">Acceso administrativo</string>
    <string name="login_user">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_enter">Entrar</string>
    <string name="login_setup_title">Configura tu cuenta administrativa</string>

    <string name="settings_title">Ajustes</string>
    <string name="settings_emulator">Emulador</string>
    <string name="settings_expansion">Expansión</string>
    <string name="settings_db">Base de datos</string>
    <string name="settings_soap">SOAP</string>
    <string name="settings_save">Guardar</string>

    <string name="offline_mode">Sin conexión: modo visual, acciones deshabilitadas</string>

    <string name="module_accounts">Cuentas</string>
    <string name="module_characters">Personajes</string>
    <string name="module_world">Mundo</string>
    <string name="module_economy">Economía</string>
    <string name="module_support">Soporte</string>
</resources>